fix: button dark mode issue

--- a/src/styles/content/base/_root.scss
+++ b/src/styles/content/base/_root.scss
@@ -21,6 +21,8 @@
   --#{var.$prefix}line-height-8: 1.8;
 
   // colors
+  --#{var.$prefix}color-blue-43: hsl(214, 94%, 43%);
+  --#{var.$prefix}color-blue-38: hsl(214, 95%, 38%);
   --#{var.$prefix}color-white: hsl(0, 0%, 100%);
   --#{var.$prefix}color-gray-95: hsl(0, 0%, 95%);
   --#{var.$prefix}color-gray-90: hsl(0, 0%, 90%);
@@ -29,7 +31,9 @@
   --#{var.$prefix}color-gray-60: hsl(0, 0%, 60%);
   --#{var.$prefix}color-gray-45: hsl(0, 0%, 45%);
   --#{var.$prefix}color-gray-30: hsl(0, 0%, 30%);
+  --#{var.$prefix}color-gray-25: hsl(0, 0%, 25%);
   --#{var.$prefix}color-gray-20: hsl(0, 0%, 20%);
+  --#{var.$prefix}color-gray-15: hsl(0, 0%, 15%);
   --#{var.$prefix}color-gray-10: hsl(0, 0%, 10%);
   --#{var.$prefix}color-black: hsl(0, 0%, 6%);
   // transparent colors
